added 2 fields and client

--- a/templates/custom_pages/courses.html.twig
+++ b/templates/custom_pages/courses.html.twig
@@ -36,13 +36,12 @@
                                     <p>At Skills Farm you can find many courses for.<br>
                                         Working executives students and house wives and whoever wants to update their
                                         qualification and
-                                        skills. We have find up with many universities Collages and institutes in India
+                                        skills. We have tied up with many universities Collages and institutes in India
                                         and Abroad .
                                         You Can find Variety of courses like hardware software courses, MBA MCA, Mooch
                                         courses
                                         Networking, Web designing Animation , Video gaming .
                                         <br>
-
                                         For more details Contact Skills farm through <a href="{{ path('_contactus') }}">email</a>.
                                     </p>
                                 </div>
