--- a/templates/employer/index.html.twig
+++ b/templates/employer/index.html.twig
@@ -271,8 +271,11 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
-                                    <blockquote class="testimonial-text font-alt">I am alone, and feel the charm of
-                                        existence in this spot, which was created for the bliss of souls like mine.
+                                    <blockquote class="testimonial-text font-alt">Really helped me out a lot. And the fact that they are open
+                                        every day of the week ensured that I did'nt have to wait for my doubts to be
+                                        cleared. They are the reason I got a great score in SAT examination and admission
+                                        offers from most places I applied to. I would recommend EduAims to anyone who wants
+                                        to take SAT classes and study abroad.
                                     </blockquote>
                                 </div>
                             </div>
@@ -280,8 +283,7 @@
                                 <div class="col-sm-4 col-sm-offset-4">
                                     <div class="testimonial-author">
                                         <div class="testimonial-caption font-alt">
-                                            <div class="testimonial-title">Jack Woods</div>
-                                            <div class="testimonial-descr">SomeCompany INC, CEO</div>
+                                            <div class="testimonial-title">Kiran</div>
                                         </div>
                                     </div>
                                 </div>
@@ -297,9 +299,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
-                                    <blockquote class="testimonial-text font-alt">I should be incapable of drawing a
-                                        single stroke at the present moment; and yet I feel that I never was a greater
-                                        artist than now.
+                                    <blockquote class="testimonial-text font-alt">Not being that great at academics, I was a bit apprehensive.
+                                        The counsellors at EduAims helped me build my profile well enough to get into
+                                        LSE.
                                     </blockquote>
                                 </div>
                             </div>
@@ -307,8 +309,7 @@
                                 <div class="col-sm-4 col-sm-offset-4">
                                     <div class="testimonial-author">
                                         <div class="testimonial-caption font-alt">
-                                            <div class="testimonial-title">Jim Stone</div>
-                                            <div class="testimonial-descr">SomeCompany INC, CEO</div>
+                                            <div class="testimonial-title">Jowin J</div>
                                         </div>
                                     </div>
                                 </div>
@@ -324,9 +325,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
-                                    <blockquote class="testimonial-text font-alt">I am so happy, my dear friend, so
-                                        absorbed in the exquisite sense of mere tranquil existence, that I neglect my
-                                        talents.
+                                    <blockquote class="testimonial-text font-alt">Very informative and very pleasant. Really helpful in clearing
+                                        all my confusion.Looking forward to studying in UK.
                                     </blockquote>
                                 </div>
                             </div>
@@ -334,8 +334,7 @@
                                 <div class="col-sm-4 col-sm-offset-4">
                                     <div class="testimonial-author">
                                         <div class="testimonial-caption font-alt">
-                                            <div class="testimonial-title">Adele Snow</div>
-                                            <div class="testimonial-descr">SomeCompany INC, CEO</div>
+                                            <div class="testimonial-title">Rajshekar R</div>
                                         </div>
                                     </div>
                                 </div>
