--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -162,6 +162,20 @@
                         <img src="images/icons/cat2.png" alt="">
                     </div>
                     <h5>Real Estate</h5>
+
+
+                </div>
+                <div class="category-item" onclick="javascript:location.href='{{ path('_contactus') }}'">
+                    <div class="img-icon">
+                        <img src="images/icons/cat4.png" alt="">
+                    </div>
+                    <h5>Walk-in Drives</h5>
+                </div>
+                <div class="category-item" onclick="javascript:location.href='{{ path('_contactus') }}'">
+                    <div class="img-icon">
+                        <img src="images/icons/cat1.png" alt="">
+                    </div>
+                    <h5>Government Jobs</h5>
                 </div>
                 <div class="category-item" onclick="javascript:searchforJobstype('14')">
                     <div class="img-icon">
