--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -79,6 +79,12 @@
                                     <li>
                                         <a href="{{ path('custom_courses') }}">Our Courses</a>
                                     </li>
+                                    <li>
+                                        <a href="{{ path('_contactus') }}">Government Jobs</a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path('_contactus') }}">Walk-in Drives</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li>
@@ -162,6 +168,12 @@
                                         </li>
                                         <li>
                                             <a href="{{ path('custom_courses') }}">Our Courses</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('_contactus') }}">Government Jobs</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('_contactus') }}">Walk-in Drives</a>
                                         </li>
                                     </ul>
                                 </li>
