--- a/public/css/shortcode/slider.css
+++ b/public/css/shortcode/slider.css
@@ -54,7 +54,7 @@ NOTE: This is Slider style file. All Slider related style included in this file.
 .select .nice-select {
   border: medium none;
   border-radius: 0;
-  color: #ababab;
+  color: #626262;
   height: 60px;
   line-height: 60px;
   width: 100%;
