--- a/templates/custom_pages/studyabroad.html.twig
+++ b/templates/custom_pages/studyabroad.html.twig
@@ -27,7 +27,7 @@
                         <div class="area-title">
                             <div class="single-job-post">
                                 <div class="img-icon">
-                                    <img src="images/company-logo/1.png" alt="">`
+                                    <img src="images/company-logo/1.png" alt="">
                                 </div>
                                 <div class="address">
                                     <h6>Study Abroad</h6>
