--- a/public/css/nice-select.css
+++ b/public/css/nice-select.css
@@ -111,6 +111,7 @@
     .nice-select .list:hover .option:not(:hover) {
       background-color: transparent !important; }
   .nice-select .option {
+    color: #626262;
     cursor: pointer;
     font-weight: 400;
     line-height: 40px;
@@ -121,9 +122,12 @@
     padding-right: 29px;
     text-align: left;
     -webkit-transition: all 0.2s;
-    transition: all 0.2s; }
+    transition: all 0.2s;
+    z-index: 1000}
     .nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus {
-      background-color: #f6f6f6; }
+      background-color: #f6f6f6;
+      color: #626262;
+    }
     .nice-select .option.selected {
       font-weight: bold; }
     .nice-select .option.disabled {
