--- a/templates/home/forgotpassword.html.twig
+++ b/templates/home/forgotpassword.html.twig
@@ -8,9 +8,12 @@
             </div>
             <form action="/changepassword/{{ id }}/{{ rand }}/{{ random }}" method="post">
                 <div class="form-box">
-                    <input type="password" id="password" class="mb-14" name="password" placeholder="Please Enter you new password" required/>
-                    <input type="password" id="reenterpassword" class="mb-14" name="reenterpassword" placeholder="Re-Enter the password" required/>
+                    <input type="password" id="password" class="mb-14" name="password"
+                           placeholder="Please Enter you new password" required/>
+                    <input type="password" id="reenterpassword" class="mb-14" name="reenterpassword" onkeyup='check();'
+                           placeholder="Re-Enter the password" required/>
                     <input type="hidden" value="{{ random }}" name="random">
+                    <span id='message'></span>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="text-uppercase">Login</button>
@@ -20,4 +23,20 @@
     </div>
     {% include "login.html.twig" %}
     {% include "register.html.twig" %}
+    <script>
+        var check = function () {
+            if (document.getElementById('password').value != '' || document.getElementById('reenterpassword').value != '') {
+                if (document.getElementById('password').value ==
+                    document.getElementById('reenterpassword').value) {
+                    document.getElementById('message').style.color = 'green';
+                    document.getElementById('message').innerHTML = 'matching';
+                } else {
+                    document.getElementById('message').style.color = 'red';
+                    document.getElementById('message').innerHTML = 'not matching';
+                }
+            }
+            else
+                document.getElementById('message').innerHTML = '';
+        }
+    </script>
 {% endblock %}
