--- a/templates/jobseeker/index.html.twig
+++ b/templates/jobseeker/index.html.twig
@@ -105,7 +105,7 @@
                                                     <p>This would be helpfull in finding a suitable job</p>
                                                 </div>
                                                 <div class="buttonback">
-                                                    <a href="#" class="button button-large-box lg-btn mr-20">back</a>
+                                                    <a href="{{ path('_jobseeker_profile_edit') }}" class="button button-large-box lg-btn mr-20">Edit Profile</a>
                                                 </div>
                                             </div>
                                         </form>
