--- a/templates/jobseeker/editEducation.html.twig
+++ b/templates/jobseeker/editEducation.html.twig
@@ -102,7 +102,7 @@
             </div>
             <input type="hidden" id="type" name="type" value="{{ i }}">
             <input type="hidden" value="{{ idedu }}" id="id" name="id">
-            <input type="submit" value="Save">
+            <input type="submit" value="Save" style="color: white;background: #28a745;width: 220px;">
         </form>
         <script>
             document.getElementById('passoutyear_{{ i }}').value = '{{ passedoutyear_data }}';
@@ -155,7 +155,7 @@
                                 <li>
                                     <a href="/">Home</a>
                                 </li>
-                                <li>Resume</li>
+                                <li>Edit Education</li>
                             </ul>
                         </div>
                     </div>
