--- a/templates/jobseeker/editProfile.html.twig
+++ b/templates/jobseeker/editProfile.html.twig
@@ -10,9 +10,9 @@
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
-                                <li>Resume</li>
+                                <li>Edit Profile</li>
                             </ul>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                     </div>
 
                 </div>
-                <input type="submit" value="Save" id="formsubmit"/>
+                <input type="submit" value="Save" id="formsubmit" style="width: 220px;margin-left: 31.1%;color: white;background: #28a745;"/>
               {{ form_end(form) }}
             </div>
         </div>
