--- a/templates/employer/index.html.twig
+++ b/templates/employer/index.html.twig
@@ -271,10 +271,10 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
-                                    <blockquote class="testimonial-text font-alt">Really helped me out a lot. And the fact that they are open
-                                        every day of the week ensured that I did'nt have to wait for my doubts to be
+                                    <blockquote class="testimonial-text font-alt">Really helped me a lot. And the fact that they are open
+                                        every day of the week ensuring I didn't have to wait for my doubts to be
                                         cleared. They are the reason I got a great score in SAT examination and admission
-                                        offers from most places I applied to. I would recommend EduAims to anyone who wants
+                                        offers from most places I applied to. I would recommend Skillsfarm to anyone who wants
                                         to take SAT classes and study abroad.
                                     </blockquote>
                                 </div>
@@ -299,8 +299,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
-                                    <blockquote class="testimonial-text font-alt">Not being that great at academics, I was a bit apprehensive.
-                                        The counsellors at EduAims helped me build my profile well enough to get into
+                                    <blockquote class="testimonial-text font-alt">Not being that great at academics,
+                                        I was a bit apprehensive.
+                                        The counsellors at Skillsfarm helped me build my profile well enough to get into
                                         LSE.
                                     </blockquote>
                                 </div>
@@ -325,8 +326,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-8 col-sm-offset-2">
-                                    <blockquote class="testimonial-text font-alt">Very informative and very pleasant. Really helpful in clearing
-                                        all my confusion.Looking forward to studying in UK.
+                                    <blockquote class="testimonial-text font-alt">Very informative and very pleasant.
+                                        Really helpful in clearing
+                                        all my confusion. Looking forward to studying in UK.
                                     </blockquote>
                                 </div>
                             </div>
