--- a/templates/employer/home.html.twig
+++ b/templates/employer/home.html.twig
@@ -98,14 +98,14 @@
                                                           required style="text-transform: none;"
                                                 >{% if company.vcdescription is defined %}{{ company.vcdescription }}{% endif %}</textarea>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="Background">Background URL :</label>
-                                                <input type="text" id="Background" class="form-control"
-                                                       name="Background"
-                                                       placeholder="Background URL"
-                                                       required style="text-transform: none;"
-                                                       value="{% if company.vcdescription is defined %}vcdescription{{ company.vcurl }}{% endif %}"/>
-                                            </div>
+                                            {#<div class="form-group">#}
+                                                {#<label for="Background">Background URL :</label>#}
+                                                {#<input type="text" id="Background" class="form-control"#}
+                                                       {#name="Background"#}
+                                                       {#placeholder="Background URL"#}
+                                                       {#required style="text-transform: none;"#}
+                                                       {#value="{% if company.vcdescription is defined %}vcdescription{{ company.vcurl }}{% endif %}"/>#}
+                                            {#</div>#}
                                             <div class="form-group">
                                                 <label for="videourl">Video URL :</label>
                                                 <input type="text" id="videourl" class="form-control"
@@ -141,7 +141,7 @@
                                             <div class="form-group">
                                                 <button type="submit" class="btn btn-round btn-b">Save</button>
                                             </div>
-                                            <div class="form-group"><a href="">Save & Preview?</a></div>
+                                            {#<div class="form-group"><a href="">Save & Preview?</a></div>#}
                                         </form>
                                     </div>
                                 </div>
