--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -428,7 +428,7 @@
                                 <p class="text-white p-0">Really helped me out a lot. And the fact that they are open
                                     every day of the week ensured that I did'nt have to wait for my doubts to be
                                     cleared. They are the reason I got a great score in SAT examination and admission
-                                    offers from most places I applied to. I would recommend EduAims to anyone who wants
+                                    offers from most places I applied to. I would recommend Skillsfarm to anyone who wants
                                     to take SAT classes and study abroad.</p>
                             </div>
                             <div class="testimonial-info">
@@ -438,7 +438,7 @@
                         <div class="single-testimonial">
                             <div class="testimonial-text pt-46">
                                 <p class="text-white p-0">Not being that great at academics, I was a bit apprehensive.
-                                    The counsellors at EduAims helped me build my profile well enough to get into
+                                    The counsellors at Skillsfarm helped me build my profile well enough to get into
                                     LSE.</p>
                             </div>
                             <div class="testimonial-info">
