changes in big fixes

--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -35,7 +35,7 @@
                         <p><strong>Our Philosophy</strong></p>
                         <p>Skills farm is designed and led by a passionate team under the
                             leadership of &nbsp;<b>Mr SHYJU K R NAIR</b> along with young and energetic minds like
-                            Mr Geo verghese, Mr Johnson Dsouza and Mr Jeffry who all have got wide and
+                            Mr Jayan verghese, Mr Johnson and Mr Joseph who all have got wide and
                             vast experience in the industry. </p>
                         <p>
                             <strong>Our vision and Motto and the values</strong>
@@ -78,9 +78,10 @@
                             <img src="/img/shyju.jpeg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>Shyju Nair</h5>
+                            <h5>SHYJU NAIR</h5>
                             <h6>CEO</h6>
                             <h6>shyjunair2018@gmail.com</h6>
+                            <h6>+91 8848920235</h6>
                         </div>
                     </div>
                 </div>
@@ -92,9 +93,9 @@
                             <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>GEO VARGHESE</h5>
+                            <h5>JAYAN VARGHESE</h5>
                             <h6>CTO</h6>
-                            <h6>20angelgeo@gmail.com </h6>
+                            <h6>+91 8095708180</h6>
                         </div>
                     </div>
                 </div>
@@ -106,9 +107,9 @@
                             <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>JAEFFRY JOSEPH</h5>
+                            <h5>JOSEPH</h5>
                             <h6>Marketing</h6>
-                            <h6>josephjeffry2@gmail.com</h6>
+                            <h6>+91 9480571937</h6>
                         </div>
                     </div>
                 </div>
@@ -119,9 +120,9 @@
                             <img src="/img/default.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>Johnson Jose</h5>
+                            <h5>JOHNSON</h5>
                             <h6>Customer Service</h6>
-                            <h6>johnsonjose135@gmail.com</h6>
+                            <h6>+91 7907176580</h6>
                         </div>
                     </div>
                 </div>
