--- a/templates/employer/login.html.twig
+++ b/templates/employer/login.html.twig
@@ -30,7 +30,7 @@
                         <div class="form-group">
                             <button type="submit" class="btn btn-round btn-b">Login</button>
                         </div>
-                        <div class="form-group"><a href="">Forgot Password?</a></div>
+                        {#<div class="form-group"><a href="">Forgot Password?</a></div>#}
                     </form>
                 </div>
                 <div class="col-sm-5">
