--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -9,7 +9,7 @@
                             <a href="">Call Us: +91 8848920235</a>
                         </li>
                         <li>
-                            <a href="">Email: skillsfarmindia@gmail.com</a>
+                            <a href="">Email: support@skillsfarm.in</a>
                         </li>
                     </ul>
                     <div class="social-links">
